Agregar la clase especialidad medica al modelo para poder listar las especialidades medicas desde cualquier parte. Tambien se agrego la relacion Medico > Especialidad Medica (con 1 a muchos).

--- a/DoctorWebASP/Views/Shared/_Layout.cshtml
+++ b/DoctorWebASP/Views/Shared/_Layout.cshtml
@@ -54,23 +54,28 @@
 
                 <ul class="sidebar-menu">
                     <li class="header">MENU PRINCIPAL</li>
-                    <!-- Personal Information Menu Section -->
+                    <!-- Cita Menu Section -->
                     <li class="treeview">
-                        <a href="/People/Index">
-                            <i class="fa fa-user"></i> <span>Datos Personales</span>
+                        <a href="#">
+                            <i class="fa fa-calendar-check-o"></i> <span>Citas</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
                             <li class="active">
-                                <a href="/People/Create">
-                                    <i class="fa fa-pencil-square-o"></i> <span>Consultar</span>
+                                <a href="/Citas/Create">
+                                    <i class="fa fa-pencil-square-o"></i> <span>Solicitar Cita</span>
+                                </a>
+                            </li>
+                            <li class="active">
+                                <a href="/Citas/Index">
+                                    <i class="fa fa-search"></i> <span>Consultar Citas</span>
                                 </a>
                             </li>
                         </ul>
                         <!-- =============================================== -->
-
+                        <!-- Aqui van las siguientes opciones del menu -->
                     <li class="treeview">
                         <a href="/People/Index">
                             <i class="fa fa-address-card"></i> <span>Perfil de Usuario</span>
