--- a/DoctorWebASP/Views/Citas/Create.cshtml
+++ b/DoctorWebASP/Views/Citas/Create.cshtml
@@ -4,25 +4,42 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<section class="content-header">
+    <h1>
+        Cita Medica
+        <small>Solicitud de Cita</small>
+    </h1>
+    <ol class="breadcrumb">
+        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li><a href="#">Cita</a></li>
+        <li class="active">Solicitud Cita</li>
+    </ol>
+</section>
 
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Cita</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+<section class="content">
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">Introduzca la informacion necesaria para crear su cita medica</h3>
         </div>
-    </div>
-}
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
+            <div class="form-horizontal">
+                <div class="box-body">
+                    <h4>Cita</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Create" class="btn btn-default" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</section>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
