--- a/DoctorWebASP/Views/Citas/Index.cshtml
+++ b/DoctorWebASP/Views/Citas/Index.cshtml
@@ -4,24 +4,44 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<section class="content-header">
+    <h1>
+        Cita Medica
+        <small>Consulta de Citas</small>
+    </h1>
+    <ol class="breadcrumb">
+        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li><a href="#">Cita</a></li>
+        <li class="active">Consulta de Citas</li>
+    </ol>
+</section>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th></th>
-    </tr>
+<section class="content">
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">Consulte sus citas medicas registradas aqui</h3>
+        </div>
+        <div class="box-body">
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
+            <table class="table">
+                <tr>
+                    <th></th>
+                </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CitaId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CitaId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CitaId })
-        </td>
-    </tr>
-}
+                @foreach (var item in Model)
+            {
+                    <tr>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.CitaId }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.CitaId }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.CitaId })
+                        </td>
+                    </tr>
+                }
 
-</table>
+            </table>
+         </div>
+        </div>
+</section>
