--- a/DoctorWebASP/Views/Shared/_Layout.cshtml
+++ b/DoctorWebASP/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using DoctorWebASP.Controllers.Helpers
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,6 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/font-awesome.css")
 
+    @RenderSection("StyleContent", false)
 </head>
 <body class="hold-transition skin-red-light sidebar-mini">
     <!-- Site wrapper -->
@@ -74,6 +76,24 @@
                                 </a>
                             </li>
                         </ul>
+                    </li>
+                    <li class="treeviw @Html.AgregarClaseSi(ViewData.esPaginaActual(MenuPaginas.Notificaciones) || ViewData.esPaginaActual(MenuPaginas.NotificacionGuardar), "active")">
+                        <a href="@Url.Action(actionName: "Index", controllerName: "Notificaciones")">
+                            <i class="fa fa-bell"></i> <span>Notificaciones</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li class="@Html.AgregarClaseSi(ViewData.esPaginaActual(MenuPaginas.Notificaciones), "active")">
+                                <a href="@Url.Action(actionName: "Index", controllerName: "Notificaciones")"><i class="fa fa-list"></i> Mostrar</a>
+                            </li>
+                            <li class="@Html.AgregarClaseSi(ViewData.esPaginaActual(MenuPaginas.NotificacionGuardar), "active")">
+                                <a href="@Url.Action(actionName: "Detail", controllerName: "Notificaciones", routeValues: new { codigo = 0 })"><i class="fa fa-fw fa-save"></i> Guardar</a>
+                            </li>
+                        </ul>
+                    </li>
+
                         <!-- =============================================== -->
                         <!-- Aqui van las siguientes opciones del menu -->
                     <li class="treeview">
@@ -91,7 +111,17 @@
         <!-- =============================================== -->
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
-            @RenderBody()
+            <!-- Content Header (Page header) -->
+
+            <section class="content-header">
+                @RenderSection("TitleContent", false)
+            </section>
+
+            <!-- Main content -->
+            <section class="content">
+                @RenderBody()
+
+            </section>
             <!-- /.content -->
         </div>
         <!-- /.content-wrapper -->
@@ -109,6 +139,7 @@
 
 
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+        @RenderSection("scripts", required: false)
+        @RenderSection("ScriptContent", false)
 </body>
 </html>
