--- a/DoctorWebASP/Views/Reportes/Index.cshtml
+++ b/DoctorWebASP/Views/Reportes/Index.cshtml
@@ -19,87 +19,211 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="row">
-                <div class="col-md-6 col-sm-6 col-xs-12">
+                @*Reporte #1: Cantidad de usuarios registrados en un tiempo determinado.*@
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="info-box">
-                        <span class="info-box-icon bg-aqua"><i class="fa fa-user-o"></i></span>
+                        <span class="info-box-icon bg-blue"><i class="fa fa-user-o"></i></span>
 
                         <div class="info-box-content">
-                            <span class="info-box-text">Cantidad de usuarios registrados en un tiempo determinado.</span>
-                            <span class="info-box-number">90<small>%</small></span>
+                            <span class="info-box-text">Cantidad de usuarios<br /> registrados mensualmente.</span>
+                            <span class="info-box-number">100<small> usuarios</small></span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
                     <!-- /.info-box -->
                 </div>
 
-                <div class="col-md-6">
-                    <div class="info-box bg-aqua">
-                        <span class="info-box-icon"><i class="fa fa-user-o"></i></span>
+                @*Reporte #2: Promedio de edad de los pacientes.*@
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-blue"><i class="fa fa-bar-chart"></i></span>
 
                         <div class="info-box-content">
-                            <span class="info-box-text">Cantidad de usuarios registrados en un tiempo determinado.</span>
-                            <span class="info-box-number">163,921</span>
-
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 40%"></div>
-                            </div>
-                            <span class="progress-description">
-                                40% Increase in 30 Days
-                            </span>
+                            <span class="info-box-text">Promedio de edad<br/> de los pacientes.</span>
+                            <span class="info-box-number">30 <small>años</small></span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
                     <!-- /.info-box -->
                 </div>
-            </div>
 
-            <div class="box">
-                <div class="box box-primary">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">Seleccione un reporte</h3>
+                @*Reporte #5: Promedio uso a la aplicación.*@
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-blue"><i class="fa fa-area-chart"></i></span>
 
-                        @*<div class="box-tools pull-right">
+                        <div class="info-box-content">
+                            <span class="info-box-text">Promedio uso a la aplicación.</span>
+                            <span class="info-box-number">50<small>% de uso</small></span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                    <!-- /.info-box -->
+                </div>
+
+                @*Reporte #3: Promedio de citas por médico.*@
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="box box-danger">
+                        <div class="box-header with-border">
+                            <h3 class="box-title"><i class="fa fa-stethoscope"></i> Promedio de citas por médico.</h3>
+
+                            <div class="box-tools pull-right">
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse">
                                     <i class="fa fa-minus"></i>
                                 </button>
                                 <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-                            </div>*@
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body">
+                            <div class="table-responsive">
+                                <table class="table no-margin">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Médico</th>
+                                            <th>Promedio</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Médico1 Médico1</td>
+                                            <td>50</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>Médico2 Médico2</td>
+                                            <td>80</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>Médico3 Médico3</td>
+                                            <td>20</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.box-body -->
+                        <div class="box-footer clearfix">
+                            <a href="javascript:void(0)" class="btn btn-sm btn-info btn-flat pull-right">Ver todos los médicos</a>
+                        </div>
+                        <!-- /.box-footer -->
                     </div>
-                    <!-- /.box-header -->
-                    <div class="box-body">
-                        <ul class="products-list product-list-in-box">
-                            <li class="item">
-                                <div class="product-info">
-                                    <a href="javascript:void(0)" class="product-title">
-                                        Reporte #1
-                                    </a>
-                                    <span class="product-description">
-                                        Cantidad de usuarios registrados en un tiempo determinado.
-                                    </span>
-                                </div>
-                            </li>
-                            <!-- /.item -->
-                            <li class="item">
-                                <div class="product-img">
-                                    <img src="dist/img/default-50x50.gif" alt="Product Image">
-                                </div>
-                                <div class="product-info">
-                                    <a href="javascript:void(0)" class="product-title">
-                                        Reporte #2
-                                    </a>
-                                    <span class="product-description">
-                                        Promedio de edad de los pacientes.
-                                    </span>
-                                </div>
-                            </li>
-                            <!-- /.item -->
-                        </ul>
-                    </div>
-                    <!-- /.box-body -->
+                    <!-- /.box -->
                 </div>
-                <!-- /.box -->
+
+                @*Reporte #4: Promedio de recursos disponibles en un tiempo determinado.*@
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="box box-danger">
+                        <div class="box-header with-border">
+                            <h3 class="box-title"><i class="fa fa-medkit"></i> <small style="font-size:medium">Disponibilidad mensual de recursos.</small></h3>
+
+                            <div class="box-tools pull-right">
+                                <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                                    <i class="fa fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body">
+                            <div class="table-responsive">
+                                <table class="table no-margin">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Recurso</th>
+                                            <th>Disponibilidad</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Recurso1</td>
+                                            <td>50</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>Recurso2</td>
+                                            <td>80</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>Recurso3</td>
+                                            <td>20</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.box-body -->
+                        <div class="box-footer clearfix">
+                            <a href="javascript:void(0)" class="btn btn-sm btn-info btn-flat pull-right">Ver todos los recursos</a>
+                        </div>
+                        <!-- /.box-footer -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+
+                @*Reporte #6: Promedio de citas canceladas por médico en un tiempo determinado.*@
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="box box-danger">
+                        <div class="box-header with-border">
+                            <h3 class="box-title"><i class="fa fa-window-close"></i> <small style="font-size:medium">Citas canceladas mensualmente.</small></h3>
+
+                            <div class="box-tools pull-right">
+                                <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                                    <i class="fa fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                            </div>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body">
+                            <div class="table-responsive">
+                                <table class="table no-margin">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Médico</th>
+                                            <th>Promedio</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Médico1 Médico1</td>
+                                            <td>50</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>Médico2 Médico2</td>
+                                            <td>80</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>Médico3 Médico3</td>
+                                            <td>20</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div>
+                        <!-- /.box-body -->
+                        <div class="box-footer clearfix">
+                            <a href="javascript:void(0)" class="btn btn-sm btn-info btn-flat pull-right">Ver todos los médicos</a>
+                        </div>
+                        <!-- /.box-footer -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+
             </div>
-            <!-- /.box-body -->
         </div>
         <!-- /.box -->
     </div>
