Agregando link de Reportes Preestablecido al menú.

--- a/DoctorWebASP/Views/Shared/_Layout.cshtml
+++ b/DoctorWebASP/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
         <header class="main-header">
             <!-- Logo -->
-            <a href="../../index2.html" class="logo">
+            <a href="@Url.Action("Index", "Home")" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>Doctor</b>Web</span>
                 <!-- logo for regular state and mobile devices -->
@@ -112,7 +112,7 @@
                         </a>
                         <ul class="treeview-menu">
                             <li class="active">
-                                <a href="#">
+                                <a href="@Url.Action("Index", "Reportes")">
                                     <i class="fa fa-table"></i> <span>Preestablecidos</span>
                                 </a>
                             </li>
