--- a/DoctorWebASP/Views/Citas/SeleccionarEspecialidad.cshtml
+++ b/DoctorWebASP/Views/Citas/SeleccionarEspecialidad.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DoctorWebASP.ViewModels.EspecialidadViewModel
 @{
     ViewBag.Title = "SeleccionarEspecialidad";
 }
@@ -28,12 +28,13 @@
             <div class="form-horizontal">
                 <div class="box-body">
 
-                    <input type="hidden" name="CentroMedicoId" id="CentroMedicoId" value="@ViewBag.CentroMedicoId" />
+                    <input type="hidden" name="CentroMedicoId" id="CentroMedicoId" value="@Model.CentroMedicoId" />
 
                     <div class="form-group">
                         @Html.Label("Medicos Disponibles", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DropDownList("EspecialidadMedica", ViewBag.EspecialidadesMedicas as SelectList, htmlAttributes: new { size = 7, @class = "form-control" })
+                            @Html.DropDownListFor(m => m.EspecialidadMedica, Model.EspecialidadesMedicas as SelectList, htmlAttributes: new { size = 7, @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.EspecialidadMedica, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
@@ -47,7 +48,9 @@
     </div>
 </section>
 
-@section Scripts{
+@section Scripts {
+
+    @Scripts.Render("~/bundles/jqueryval")
 
 
 }
