--- a/DoctorWebASP/Views/Citas/SeleccionarMedico.cshtml
+++ b/DoctorWebASP/Views/Citas/SeleccionarMedico.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DoctorWebASP.ViewModels.MedicoViewModel
 @{
     ViewBag.Title = "SeleccionarMedico";
 }
@@ -30,7 +30,8 @@
                     <div class="form-group">
                         @Html.Label("Medico", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.DropDownList("Medico", ViewBag.Medicos as SelectList, htmlAttributes: new { size = 7, @class = "form-control" })
+                            @Html.DropDownListFor(m => m.MedicoId, Model.Medicos as SelectList, htmlAttributes: new { size = 7, @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.MedicoId, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
@@ -44,7 +45,9 @@
     </div>
 </section>
 
-@section Scripts{
+@section Scripts {
+
+    @Scripts.Render("~/bundles/jqueryval")
 
 
 }
