--- a/DoctorWebASP/Views/Citas/SeleccionarMedico.cshtml
+++ b/DoctorWebASP/Views/Citas/SeleccionarMedico.cshtml
@@ -26,7 +26,7 @@
 
             <div class="form-horizontal">
                 <div class="box-body">
-
+                    <input type="hidden" name="CentroMedicoId" id="CentroMedicoId" value="@Model.CentroMedicoId" />
                     <div class="form-group">
                         @Html.Label("Medico", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
