Correccion tabla calendarios e inclusion en menu

--- a/DoctorWebASP/Views/Shared/_Layout.cshtml
+++ b/DoctorWebASP/Views/Shared/_Layout.cshtml
@@ -123,6 +123,11 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="treeview">
+                        <a href="/Calendarios/Index">
+                            <i class="fa fa-calendar"></i> <span>Calendario</span>
+                        </a>
+                    </li>
                 </ul>
             </section>
             <!-- /.sidebar -->
