Más cambios de presentación calendario

--- a/DoctorWebASP/Views/Calendarios/Index.cshtml
+++ b/DoctorWebASP/Views/Calendarios/Index.cshtml
@@ -77,12 +77,17 @@
         y = date.getFullYear();
     $('#calendar').fullCalendar({
         defaultView: 'agendaWeek',
+        columnFormat: {
+            month: 'ddd',   
+            week: 'ddd D/M', 
+            day: 'dddd D/M'  
+        },
         monthNames: ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre'],
         monthNamesShort: ['Ene','Feb','Mar','Abr','May','Jun','Jul','Ago','Sep','Oct','Nov','Dic'],
         dayNames: ['Domingo','Lunes','Martes','Miércoles','Jueves','Viernes','Sábado'],
         dayNamesShort: ['Dom', 'Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb'],
         allDayText: 'Todo el día',
-        weekNumberTitle: 'Sem',
+        weekNumberTitle: 'Sem ',
 
         firstDay: 1,
       header: {
