--- a/DoctorWebASP/Views/Reportes/Index.cshtml
+++ b/DoctorWebASP/Views/Reportes/Index.cshtml
@@ -104,7 +104,7 @@
                                     <i class="fa fa-caret-down"></i>
                                 </button>
                             </div>
-                            <span class="info-box-number"><small>Hay un promedio de </small>#<small> recursos disponibles en este periodo.</small></span>
+                            <span class="info-box-number"><small>Hay un promedio de </small>@Model.promedioRecursosDisponibles<small> recursos disponibles en este periodo.</small></span>
                         </div>
                     </div>
                 </div>
