--- a/DoctorWebASP/Views/Reportes/Index.cshtml
+++ b/DoctorWebASP/Views/Reportes/Index.cshtml
@@ -158,7 +158,7 @@
             },
                 function (start, end) {
                     $('#daterange-btn-1 span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
-                    var parameters = { fechaInicioStr: start.format('DD-MM-YYYY'), fechaFinStr: end.format('DD-MM-YYYY') }
+                    var parameters = { fechaInicioStr: start.format('MM-DD-YYYY'), fechaFinStr: end.format('MM-DD-YYYY') }
                     $.ajax({
                         type: "POST",
                         contentType: "application/json; charset=utf-8",
