--- a/DoctorWebASP/Views/Reportes/Index.cshtml
+++ b/DoctorWebASP/Views/Reportes/Index.cshtml
@@ -104,7 +104,7 @@
                                     <i class="fa fa-caret-down"></i>
                                 </button>
                             </div>
-                            <span class="info-box-number"><small>Hay un promedio de </small>@Model.promedioRecursosDisponibles<small> recursos disponibles en este periodo.</small></span>
+                            <span class="info-box-number"><small>Hay un promedio de </small># <small> recursos disponibles en este periodo.</small></span>
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                 }
             );
 
-            $('#daterange-btn-2').daterangepicker(
+            var dateRange2 = $('#daterange-btn-2').daterangepicker(
             {
                 ranges: {
                     'Today': [moment(), moment()],
@@ -194,6 +194,24 @@
             },
                 function (start, end) {
                     $('#daterange-btn-2 span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+                    var parameters = { fechaInicioStr: start.format('MM-DD-YYYY'), fechaFinStr: end.format('MM-DD-YYYY') }
+                    $.ajax({
+                        type: "POST",
+                        contentType: "application/json; charset=utf-8",
+                        url: "@Url.Action(actionName: "getPromedioRecursosDisponibles", controllerName: "Reportes")",
+                        data: JSON.stringify(parameters),
+                        datatype: "application/json",
+                        success: function (result) {
+                            //do something
+                            console.log(result);
+                            $(dateRange2).parent().next().text("Hay un promedio de " + result.cantidad + " recursos disponibles durante este período de tiempo.");
+                        },
+                        error: function (xmlhttprequest, textstatus, errorthrown) {
+                            alert(" conection to the server failed ");
+                            console.log("error: " + errorthrown);
+                        }
+                    });
+                    //end of $.ajax()
                 }
             );
             $('#daterange-btn-3').daterangepicker(
