--- a/DoctorWebASP/Views/Calendarios/Index.cshtml
+++ b/DoctorWebASP/Views/Calendarios/Index.cshtml
@@ -20,6 +20,31 @@
                     </div>
                     <!-- /.box-body -->
                 </div>
+                <div class="box box-solid" style="cursor:pointer" onmouseup="drop-event()">
+                    <!-- Aqui se debe llamar la funcion eliminar -->
+                    <div class="box-header with-border">
+                        <h3 class="box-title">Delete Event</h3>
+                    </div>
+                    <div class="box-body">
+                        <div class="input-group">
+                            <div style="border:1px dotted red" align="center" class="input-group-btn">
+
+                                <img src="~/Content/Resources/basura.png" border="0" width="150" height="150">
+
+                                <h5> <b> ... Coloque eventos aqui ... </b> </h5>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <p>Input event name to delete</p>
+                        <input id="new-event" type="text" class="form-control" placeholder="Event Title">
+                        <div class="input-group-btn">
+                            <button id="add-new-event" type="button" class="btn btn-primary btn-flat">Delete</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- /.col -->
             <div class="col-md-9">
@@ -88,8 +113,9 @@
         dayNamesShort: ['Dom', 'Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb'],
         allDayText: 'Todo el día',
         weekNumberTitle: 'Sem ',
-
+        eventOverlap: false,
         firstDay: 1,
+
       header: {
         left: 'prev,next today',
         center: 'title',
